--- a/config/appconfig-dummy.json
+++ b/config/appconfig-dummy.json
@@ -5,7 +5,7 @@
 		"uploadDir" : "./public/testimages/",
 		"defaultimageFname" : "IPTC-PhotometadataRef-Std2017.1.jpg",
 		"defaultimageLabel": "IPTC Photo Metadata Standard 2017.1 reference photo",
-		"defaultlang": "de",
+		"defaultlang": "fr",
 		"localLogFpath" : "C:/localPath/getIptcPmd.log",
 		"logLevel" : 2,
 		"minMetadataHeaderSize": 71680
