--- a/config/pmdinvestigationguide.yml
+++ b/config/pmdinvestigationguide.yml
@@ -51,16 +51,25 @@ topwithprefix:
     output: iim,location
   XMP-dc_Rights:
     label: "Copyright Notice (XMP)|XMP dc:rights"
+    labellocal:
+      de: "Copyright Vermerk (XMP)|XMP dc:rights"
+      fr: "Mention de Copyright (XMP)|XMP dc:rights"
     sortorder: so120x
     specidx: "#copyright-notice"
     output: xmp,rights,isearch1
   IPTC_CopyrightNotice:
     label: "Copyright Notice (IIM)|IIM 2:116 Copyright Notice"
+    labellocal:
+      de: "Copyright Vermerk (IIM)|IIM 2:116 Copyright Notice"
+      fr: "Mention de Copyright (IIM)|IIM 2:116 Copyright Notice"
     sortorder: so120i
     specidx: "#copyright-notice"
     output: iim,rights,isearch1
   IFD0_Copyright:
     label: "Copyright Notice (Exif)|Exif Copyright"
+    labellocal:
+      de: "Copyright Vermerk (Exif)|Exif Copyright (TIFF 0x8298)"
+      fr: "Mention de Copyright (Exif)|Exif Copyright (TIFF 0x8298)"
     sortorder: so120z
     output: exif,rights
   XMP-photoshop_Country:
@@ -87,16 +96,23 @@ topwithprefix:
     label: "Creator (XMP)|XMP dc:creator"
     labellocal:
       de: "Ersteller (XMP)|XMP dc:creator"
+      fr: "Créateur (XMP)|XMP dc:creator"
     sortorder: so150x
     specidx: "#creator"
     output: xmp,rights,isearch1
   IPTC_By-line:
     label: "Creator (IIM)|IIM 2:80 By-line"
+    labellocal:
+      de: "Ersteller (IIM)|IIM 2:80 By-line"
+      fr: "Créateur (IIM)|IIM 2:80 By-line"
     sortorder: so150i
     specidx: "#creator"
     output: iim,rights,isearch1
   IFD0_Artist:
-    label: "Creator (Exif)|Exif Artist"
+    label: "Creator (Exif)|Exif Artist (TIFF 0x13B)"
+    labellocal:
+      de: "Ersteller (Exif)|Exif Artist (TIFF 0x13B)"
+      fr: "Créateur (Exif)|Exif Artist (TIFF 0x13B)"
     sortorder: so150z
     output: exif,rights
   XMP-iptcCore_CreatorContactInfo:
@@ -121,11 +137,17 @@ topwithprefix:
     output: iim,rights
   XMP-photoshop_Credit:
     label: "Credit Line (XMP)|XMP photoshop:Credit"
+    labellocal:
+      de: "Credit (XMP)|XMP photoshop:Credit"
+      fr: "Crédit (XMP)|XMP photoshop:Credit"
     sortorder: so180x
     specidx: "#credit-line"
     output: xmp,rights,isearch1
   IPTC_Credit:
     label: "Credit Line (IIM)|IIM 2:110 Credit"
+    labellocal:
+      de: "Credit (IIM)|IIM 2:110 Credit"
+      fr: "Crédit (IIM)|IIM 2:110 Credit"
     sortorder: so180i
     specidx: "#credit-line"
     output: iim,rights,isearch1
